test/Fail/Issue1698-field.agda
field
  Foo = Set

-- Error IS:  Parse error.
