test/Fail/Issue1698-field.err
Issue1698-field.agda:2,7-7
Issue1698-field.agda:2,7: Parse error
=<ERROR>
 Set

-- Error IS:  Parse erro...
